stacks/tools/librespeed/librespeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed-deployment
  labels:
    app: librespeed
spec:
  replicas: 2
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
      - name: librespeed
        image: ghcr.io/linuxserver/librespeed
        ports:
        - containerPort: 80
