stacks/tools/librespeed/librespeed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  # namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      # targetPort: 80
  selector:
    app: librespeed
  type: ClusterIP
