stacks/tools/librespeed/librespeed-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: librespeed
  namespace: default
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`librespeed.localhost`) || Host(`librespeed.thebeast.localdomain.`)
      kind: Rule
      middlewares:
        - name: headers-default
          # # namespace: default
      services:
        - name: librespeed
          port: 80
